# office

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  create_template.py  pyproject.toml  requirements.txt  test_endpoint.py
.codacy/: codacy.yaml
.cursor/rules/: Clean-Python.mdc
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
alembic/: env.py
alembic/versions/: 20260326_0001_create_reporting_tables.py  20260326_0002_add_report_type_to_reports.py  20260326_0003_update_reports_unique_constraint_for_type.py  20260326_0004_drop_reports_unique_constraint.py  20260326_0005_add_percentage_to_daily_entries.py  20260327_0006_create_users_and_roles.py  20260327_0007_add_auth_tables_and_user_fields.py  20260330_0008_monthly_workflow_tables.py  20260406_0009_invoice_email_logs.py  20260407_0010_create_assets_table.py  20260414_0011_create_suppliers_table.py  20260415_0012_create_products_table.py
app/: __init__.py
app/core/: __init__.py  security.py  storage_settings.py
app/db/: __init__.py  base.py  session.py
app/email/: __init__.py  protocol.py  smtp.py
app/models/: __init__.py  asset.py  company.py  daily_entry.py  employee.py  invoice_email_log.py  mileage_entry.py  monthly_workflow.py  product.py  refresh_token.py  report.py  role.py  supplier.py  user.py  user_identity.py  user_role.py
app/repositories/: __init__.py  asset.py  base.py  (+14 more)
specs/: prompt-backend-assets.md
src/: __init__.py  logging_config.py  main.py
templates/: excel_template2.xlsx  template_mapa.xlsx
(+165 files in other folders)
